# csuc-workshop

./: .gitignore  Makefile  PRD.md  README.md  catalog-info.yaml  cspell.json  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  publish-techdocs-to-s3.yaml
docs/: .pages  convert-project.md  first-repo.md  github-actions.md  gitignore-templates.md  ground-zero.md  index.md  reflection.md  troubleshooting.md
docs/stylesheets/: extra.css  neoteroi-spantable.css
